--- a/NeedDesk.Infra.IoC/NeedDesk.Infra.IoC.csproj
+++ b/NeedDesk.Infra.IoC/NeedDesk.Infra.IoC.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NeedDesk.Application\NeedDesk.Application.csproj" />
+    <ProjectReference Include="..\NeedDesk.Domain\NeedDesk.Domain.csproj" />
+    <ProjectReference Include="..\NeedDesk.Infra.Data\NeedDesk.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
